--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "nanoid": "^4.0.2",
     "nodemon": "^2.0.22",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "tsx": "^4.20.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -56,7 +57,6 @@
     "@types/passport": "^1.0.16",
     "@types/passport-google-oauth20": "^2.0.14",
     "ts-node": "^10.9.2",
-    "tsx": "^4.20.3",
     "typescript": "^5.9.2"
   }
 }
